--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,19 +1,40 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-black">
     <div class="container">
-        <a class="navbar-brand" href="/">SERP TRACKER</a>
-        <div class="collapse navbar-collapse">
+        <a class="navbar-brand text-white fw-bold" href="/">SEO Tracker</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <% if (typeof user !== "undefined" && user) { %>
-                    <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
-                <% } else { %>
-                    <% if (currentPage === "login") { %>
-                        <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-                    <% } else if (currentPage === "register") { %>
-                        <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-                    <% } %>
-                <% } %>
+                <li class="nav-item">
+                    <a class="nav-link nav-link-custom" href="/dashboard">Dashboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-link-custom" href="/dashboard/check">Check Now</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-link-custom btn btn-primary text-white px-3" href="/dashboard/top100">Top 100</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-link-custom btn btn-secondary text-white px-3" href="/dashboard/top100/history">History</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-link-custom" href="/logout">Logout</a>
+                </li>
             </ul>
         </div>
     </div>
 </nav>
+
+<style>
+    .bg-black {
+        background-color: #000 !important;
+    }
+    .nav-link-custom {
+        color: white !important;
+        transition: color 0.3s ease-in-out;
+    }
+    .nav-link-custom:hover {
+        color: #00aaff !important; /* Blue hover effect */
+    }
+</style>
