add feature to resend activation email

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -71,7 +71,12 @@
             <button type="submit" class="btn btn-primary">Login</button>
             <a href="/register" class="btn btn-outline-secondary">Register</a>
             <a href="/forgot-password" class="btn btn-link">Forgot Password?</a>
+            
         </div>
+        <div class="d-flex gap-2">
+            <a href="/resend-activation" class="btn btn-link">Click here to resend activation email</a>
+        </div>
+
         </form>
     </div>
     
