--- a/views/login.ejs
+++ b/views/login.ejs
@@ -74,7 +74,8 @@
             
         </div>
         <div class="d-flex gap-2">
-            <a href="/resend-activation" class="btn btn-link">Click here to resend activation email</a>
+            <p class="mt-3">Didn't receive an activation email? <a href="/resend-activation">Click here to resend</a></p>
+
         </div>
 
         </form>
