--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/navbar') %>
 
     <div class="container mt-5">
-        <h2>Welcome, <%= username %>!</h2>
+        <h2>Welcome, <%= name %>!</h2>
         <p>This is your dashboard. Here, you will be able to track your keyword rankings.</p>
 
         <h4>Manage Keywords</h4>
